error/tests/07-option-convert.rs
use error::maybe;

fn main() {
    let _ = maybe::convert(None);
}